--- a/TestParent/TestParent/TestParent.csproj
+++ b/TestParent/TestParent/TestParent.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <Version>1.0.0</Version>
+	<PackageId>TestParent</PackageId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -12,11 +13,13 @@
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.1" />
   </ItemGroup>
 
-  <ItemGroup>
+  <ItemGroup Label="Packaging">
+    <Content Include="build\TestParent.targets" PackagePath="build\TestParent.targets" />
     <Content Include="Scripts\Utility.js">
       <Pack>true</Pack>
-      <PackagePath>contentFiles\any\any\wwwroot\js\;content\any\any\wwwroot\js\</PackagePath>
+      <PackagePath>contentFiles\any\any\wwwroot\js\</PackagePath>
         <PackageCopyToOutput>true</PackageCopyToOutput>
     </Content>
   </ItemGroup>
+    
 </Project>
